# bnb-b

./: .coderabbit.yml  .cursorrules  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURSOR_PROMPTS.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_MAINTENANCE_PLAN.md  DOCUMENTATION_MANAGEMENT_COMPLETE.md  DONE.md  MASTER_PLAN.md  MIGRATION.md  MODULES.md  Makefile  ORIGINAL_PERFECT_SYSTEM_DOCUMENTATION.md  README.md  README_old.md  RECOMMENDATIONS.md  REc.md  SONNET_TASK.md  SPIKE_ANALYSIS_REGRESSION.md  TESTING_STRATEGY_PLAN.md  TESTING_STRATEGY_SIMPLIFIED.md  TODO.md  analyze_bull_run.py  analyze_generated_shorts.py  analyze_historical_shorts.py  analyze_weekly_data.py  backtest_results.txt  backtester.py  bandit-report.json  burn_aware_test.py  codex.md  config.toml  cursor.json  data_fetcher.py  debug_output.txt  debug_short_detailed.py  (+51 more)
.claude/: settings.local.json
.claude/agents/: README.md  code-architect.md  code-reviewer.md  config.json  data-analyst.md  docs-manager.mdc  test-engineer.md  trading-expert.md
.cursor/rules/: agent.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
breaking_analysis/: config_changes.diff  test_commits.sh
data/: analysis_results.txt  backtest_results.txt  entry_exit_opportunities.txt  results.csv  results_summary.txt  weekly_tails_analysis.txt
docs/archive/: MAINTENANCE_REPORT.md  SIGNALS.md  SONNET_TASK.md  SONNET_TASK_REGRESSION_FIX.md  TEST_FRAMEWORK.md
hardway/: CLAUDE.md  IMPLEMENTATION_PLAN.md  REFACTORING_RULES.md  REGRESSION_ANALYSIS.md
recovery_backup/: README.md  config.working.toml
recovery_backup/weekly_tails_working/: __init__.py  analyzer.py
src/bnb_trading/: __init__.py  backtester.py  data_fetcher.py  divergence_detector.py  elliott_wave_analyzer.py  fibonacci.py  historical_tester.py  ichimoku_module.py  indicators.py  main.py  moving_averages.py  multi_timeframe_analyzer.py  optimal_levels.py  price_action_patterns.py  sentiment_module.py  signal_generator.py  smart_short_generator.py  trend_analyzer.py  validation_protocol.py  validator.py  weekly_tails.py  whale_tracker.py
src/bnb_trading/analysis/trend/: __init__.py  analyzer.py
src/bnb_trading/analysis/weekly_tails/: analyzer.py
src/bnb_trading/core/: __init__.py  constants.py  exceptions.py  models.py  types.py
src/bnb_trading/data/: __init__.py  cache.py  fetcher.py  validators.py
src/bnb_trading/pipeline/: __init__.py  orchestrator.py  runners.py
src/bnb_trading/signals/: __init__.py  combiners.py  confidence.py  decision.py  filters.py  generator.py
src/bnb_trading/signals/filters/: guards.py
src/bnb_trading/signals/smart_short/: __init__.py  confluence.py  generator.py  market_regime.py  risk_filters.py
src/bnb_trading/testing/: __init__.py
src/bnb_trading/testing/historical/: __init__.py  analyzer.py  reporter.py  tester.py
src/bnb_trading/utils/: display.py  telemetry.py
src/bnb_trading/validation/: __init__.py
src/bnb_trading/validation/protocols/: __init__.py  metrics.py  quality.py  rules.py
tests/: __init__.py  conftest.py  test_decision_regression.py  test_fibonacci.py  test_golden_regression.py  test_integration.py  test_signal_generator.py  test_trend.py  test_weekly_tails.py
tests/analysis/: test_fibonacci.py
tests/analysis/trend/: __init__.py  test_analyzer.py
tests/fixtures/: golden_day_2024_08_05.py
tests/parity/: test_decision_parity.py  test_live_vs_backtest.py
tests/signals/: test_decision.py
tests/unit/analysis/: test_weekly_tails_analyzer.py
tests/utils/: assertion_helpers.py  mock_factories.py  test_helpers.py
